--- a/ux/package.json
+++ b/ux/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
