--- a/ux/package.json
+++ b/ux/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
@@ -45,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:7071"
+  "proxy": "http://localhost:7071",
+  "devDependencies": {
+    "@types/react-router-bootstrap": "^0.24.5"
+  }
 }
