--- a/ux/package.json
+++ b/ux/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -20,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
