--- a/ux/package.json
+++ b/ux/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -50,6 +51,7 @@
   },
   "proxy": "http://localhost:7071",
   "devDependencies": {
+    "@types/react-datepicker": "^3.1.3",
     "@types/react-router-bootstrap": "^0.24.5"
   }
 }
